ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: www.my-application.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-deployment
                port:
                  number: 3000
